runFormatTest(import.meta, ["typescript"], {
  errors: { "babel-ts": ["moduleDeclaration.ts"] },
});
