// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`kind-detection.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare /* module */ namespace A {}

=====================================output=====================================
declare namespace /* module */ A {}

================================================================================
`;

exports[`moduleDeclaration.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
module A {
    export class A {
    }
}

declare module "B" {
    export class B {
    }
}

=====================================output=====================================
module A {
  export class A {}
}

declare module "B" {
  export class B {}
}

================================================================================
`;

exports[`moduleDeclaration.ts format[babel-ts] 1`] = `
"\`module ... {}\` declarations must have a string name. Use \`namespace ... {}\` instead. (1:1)
> 1 | module A {
    | ^
  2 |     export class A {
  3 |     }
  4 | }
Cause: \`module ... {}\` declarations must have a string name. Use \`namespace ... {}\` instead. (1:0)"
`;
